crates/cockpitctl-domain/tests/snapshots/snapshot_tests__synthesize_oversized_summary.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: summary
---
{
  "id": "bigdata",
  "blocking": true,
  "missing": "fail",
  "presence": "invalid",
  "report_path": "artifacts/bigdata/report.json",
  "verdict": {
    "status": "fail",
    "counts": {
      "info": 0,
      "warn": 0,
      "error": 1
    },
    "reasons": [
      "receipt_oversized"
    ]
  },
  "truncated": false,
  "errors": [
    "receipt too large: 5000000 bytes (cap 2097152)"
  ],
  "policy_outcome": "blocked"
}
